--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -26,8 +27,13 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
 
     // Dagger 2 and Compiler
+
     compile "com.google.dagger:dagger-compiler:2.0.1"
     compile 'com.google.dagger:dagger:2.0.1'
     apt "com.google.dagger:dagger-compiler:2.0.1"
     provided 'javax.annotation:jsr250-api:1.0'
+
+    //SugarORM
+    compile 'com.github.satyan:sugar:1.4'
 }
+
