--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name="com.orm.SugarApp">
+
         <activity
             android:name=".view.MainActivity"
             android:label="@string/app_name"
@@ -26,6 +28,13 @@
             android:name=".view.NewSongActivity"
             android:label="@string/title_activity_new_song"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
+
+        <!-- SugarORM -->
+        <meta-data android:name="DATABASE" android:value="mysongs.db" />
+        <meta-data android:name="VERSION" android:value="1" />
+        <meta-data android:name="QUERY_LOG" android:value="true" />
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.mymusic.mymusicapp.model" />
     </application>
 
 </manifest>
