--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,6 @@ android {
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
     }
     buildTypes {
         release {
@@ -31,6 +30,10 @@ android {
         }
 
     }
+
+//    dexOptions {
+//        javaMaxHeapSize "4g"
+//    }
 }
 
 dependencies {
